--- a/2024/m6A/m6A_peaks_GWAS.ipynb
+++ b/2024/m6A/m6A_peaks_GWAS.ipynb
@@ -52,12 +52,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 3,
    "id": "99c0997c-5261-49c6-977b-8ae787ba71b0",
    "metadata": {
     "kernel": "R"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "── \u001b[1mAttaching core tidyverse packages\u001b[22m ──────────────────────── tidyverse 2.0.0 ──\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mdplyr    \u001b[39m 1.1.4     \u001b[32m✔\u001b[39m \u001b[34mreadr    \u001b[39m 2.1.5\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mforcats  \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mstringr  \u001b[39m 1.5.1\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mggplot2  \u001b[39m 3.5.1     \u001b[32m✔\u001b[39m \u001b[34mtibble   \u001b[39m 3.2.1\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mlubridate\u001b[39m 1.9.3     \u001b[32m✔\u001b[39m \u001b[34mtidyr    \u001b[39m 1.3.1\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mpurrr    \u001b[39m 1.0.2     \n",
+      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mpurrr\u001b[39m::\u001b[32m%||%()\u001b[39m   masks \u001b[34mbase\u001b[39m::%||%()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\u001b[36mℹ\u001b[39m Use the conflicted package (\u001b[3m\u001b[34m<http://conflicted.r-lib.org/>\u001b[39m\u001b[23m) to force all conflicts to become errors\n",
+      "\n",
+      "Attaching package: ‘data.table’\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:lubridate’:\n",
+      "\n",
+      "    hour, isoweek, mday, minute, month, quarter, second, wday, week,\n",
+      "    yday, year\n",
+      "\n",
+      "\n",
+      "The following objects are masked from ‘package:dplyr’:\n",
+      "\n",
+      "    between, first, last\n",
+      "\n",
+      "\n",
+      "The following object is masked from ‘package:purrr’:\n",
+      "\n",
+      "    transpose\n",
+      "\n",
+      "\n",
+      "Warning message in fun(libname, pkgname):\n",
+      "“bedtoolsr was built with bedtools version 2.30.0 but you have version 2.31.1 installed. Function syntax may have changed and wrapper will not function correctly. To fix this, please install bedtools version 2.30.0 and either add it to your PATH or run:\n",
+      "options(bedtools.path = \\\"[bedtools path]\\\")”\n"
+     ]
+    }
+   ],
    "source": [
     "library(tidyverse)\n",
     "library(data.table)\n",
@@ -337,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 4,
    "id": "1f1c94ec-3b95-4e8e-af63-37d244b0eef4",
    "metadata": {
     "kernel": "R"
@@ -354,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 5,
    "id": "d1e2b7ed-8d1b-4a54-8054-88e233bc498a",
    "metadata": {
     "kernel": "R"
@@ -388,80 +429,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table class=\"dataframe\">\n",
-       "<caption>A data.table: 6 × 12</caption>\n",
-       "<thead>\n",
-       "\t<tr><th scope=col>V1</th><th scope=col>V2</th><th scope=col>V3</th><th scope=col>V4</th><th scope=col>V5</th><th scope=col>V6</th><th scope=col>V7</th><th scope=col>V8</th><th scope=col>V9</th><th scope=col>gene</th><th scope=col>gene_name</th><th scope=col>TSS</th></tr>\n",
-       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "\t<tr><td>chr1</td><td>ensembl_havana</td><td>gene</td><td> 65419</td><td> 71585</td><td>.</td><td>+</td><td>.</td><td>gene_id \"\"ENSG00000186092\"\"; transcript_id \"\"ENSG00000186092\"\"; gene_type \"\"protein_coding\"\"; gene_name \"\"OR4F5\"\"; transcript_type \"\"protein_coding\"\"; transcript_name \"\"OR4F5\"\"; gene_version \"\"6\"\"; gene_source \"\"ensembl_havana\"\";   </td><td>ENSG00000186092</td><td>OR4F5 </td><td> 65419</td></tr>\n",
-       "\t<tr><td>chr1</td><td>ensembl_havana</td><td>gene</td><td>450740</td><td>451678</td><td>.</td><td>-</td><td>.</td><td>gene_id \"\"ENSG00000284733\"\"; transcript_id \"\"ENSG00000284733\"\"; gene_type \"\"protein_coding\"\"; gene_name \"\"OR4F29\"\"; transcript_type \"\"protein_coding\"\"; transcript_name \"\"OR4F29\"\"; gene_version \"\"2\"\"; gene_source \"\"ensembl_havana\"\"; </td><td>ENSG00000284733</td><td>OR4F29</td><td>451678</td></tr>\n",
-       "\t<tr><td>chr1</td><td>ensembl_havana</td><td>gene</td><td>685679</td><td>686673</td><td>.</td><td>-</td><td>.</td><td>gene_id \"\"ENSG00000284662\"\"; transcript_id \"\"ENSG00000284662\"\"; gene_type \"\"protein_coding\"\"; gene_name \"\"OR4F16\"\"; transcript_type \"\"protein_coding\"\"; transcript_name \"\"OR4F16\"\"; gene_version \"\"1\"\"; gene_source \"\"ensembl_havana\"\"; </td><td>ENSG00000284662</td><td>OR4F16</td><td>686673</td></tr>\n",
-       "\t<tr><td>chr1</td><td>ensembl_havana</td><td>gene</td><td>923923</td><td>944575</td><td>.</td><td>+</td><td>.</td><td>gene_id \"\"ENSG00000187634\"\"; transcript_id \"\"ENSG00000187634\"\"; gene_type \"\"protein_coding\"\"; gene_name \"\"SAMD11\"\"; transcript_type \"\"protein_coding\"\"; transcript_name \"\"SAMD11\"\"; gene_version \"\"13\"\"; gene_source \"\"ensembl_havana\"\";</td><td>ENSG00000187634</td><td>SAMD11</td><td>923923</td></tr>\n",
-       "\t<tr><td>chr1</td><td>ensembl_havana</td><td>gene</td><td>944203</td><td>959309</td><td>.</td><td>-</td><td>.</td><td>gene_id \"\"ENSG00000188976\"\"; transcript_id \"\"ENSG00000188976\"\"; gene_type \"\"protein_coding\"\"; gene_name \"\"NOC2L\"\"; transcript_type \"\"protein_coding\"\"; transcript_name \"\"NOC2L\"\"; gene_version \"\"11\"\"; gene_source \"\"ensembl_havana\"\";  </td><td>ENSG00000188976</td><td>NOC2L </td><td>959309</td></tr>\n",
-       "\t<tr><td>chr1</td><td>ensembl_havana</td><td>gene</td><td>960584</td><td>965719</td><td>.</td><td>+</td><td>.</td><td>gene_id \"\"ENSG00000187961\"\"; transcript_id \"\"ENSG00000187961\"\"; gene_type \"\"protein_coding\"\"; gene_name \"\"KLHL17\"\"; transcript_type \"\"protein_coding\"\"; transcript_name \"\"KLHL17\"\"; gene_version \"\"14\"\"; gene_source \"\"ensembl_havana\"\";</td><td>ENSG00000187961</td><td>KLHL17</td><td>960584</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "A data.table: 6 × 12\n",
-       "\\begin{tabular}{llllllllllll}\n",
-       " V1 & V2 & V3 & V4 & V5 & V6 & V7 & V8 & V9 & gene & gene\\_name & TSS\\\\\n",
-       " <chr> & <chr> & <chr> & <int> & <int> & <chr> & <chr> & <chr> & <chr> & <chr> & <chr> & <int>\\\\\n",
-       "\\hline\n",
-       "\t chr1 & ensembl\\_havana & gene &  65419 &  71585 & . & + & . & gene\\_id \"\"ENSG00000186092\"\"; transcript\\_id \"\"ENSG00000186092\"\"; gene\\_type \"\"protein\\_coding\"\"; gene\\_name \"\"OR4F5\"\"; transcript\\_type \"\"protein\\_coding\"\"; transcript\\_name \"\"OR4F5\"\"; gene\\_version \"\"6\"\"; gene\\_source \"\"ensembl\\_havana\"\";    & ENSG00000186092 & OR4F5  &  65419\\\\\n",
-       "\t chr1 & ensembl\\_havana & gene & 450740 & 451678 & . & - & . & gene\\_id \"\"ENSG00000284733\"\"; transcript\\_id \"\"ENSG00000284733\"\"; gene\\_type \"\"protein\\_coding\"\"; gene\\_name \"\"OR4F29\"\"; transcript\\_type \"\"protein\\_coding\"\"; transcript\\_name \"\"OR4F29\"\"; gene\\_version \"\"2\"\"; gene\\_source \"\"ensembl\\_havana\"\";  & ENSG00000284733 & OR4F29 & 451678\\\\\n",
-       "\t chr1 & ensembl\\_havana & gene & 685679 & 686673 & . & - & . & gene\\_id \"\"ENSG00000284662\"\"; transcript\\_id \"\"ENSG00000284662\"\"; gene\\_type \"\"protein\\_coding\"\"; gene\\_name \"\"OR4F16\"\"; transcript\\_type \"\"protein\\_coding\"\"; transcript\\_name \"\"OR4F16\"\"; gene\\_version \"\"1\"\"; gene\\_source \"\"ensembl\\_havana\"\";  & ENSG00000284662 & OR4F16 & 686673\\\\\n",
-       "\t chr1 & ensembl\\_havana & gene & 923923 & 944575 & . & + & . & gene\\_id \"\"ENSG00000187634\"\"; transcript\\_id \"\"ENSG00000187634\"\"; gene\\_type \"\"protein\\_coding\"\"; gene\\_name \"\"SAMD11\"\"; transcript\\_type \"\"protein\\_coding\"\"; transcript\\_name \"\"SAMD11\"\"; gene\\_version \"\"13\"\"; gene\\_source \"\"ensembl\\_havana\"\"; & ENSG00000187634 & SAMD11 & 923923\\\\\n",
-       "\t chr1 & ensembl\\_havana & gene & 944203 & 959309 & . & - & . & gene\\_id \"\"ENSG00000188976\"\"; transcript\\_id \"\"ENSG00000188976\"\"; gene\\_type \"\"protein\\_coding\"\"; gene\\_name \"\"NOC2L\"\"; transcript\\_type \"\"protein\\_coding\"\"; transcript\\_name \"\"NOC2L\"\"; gene\\_version \"\"11\"\"; gene\\_source \"\"ensembl\\_havana\"\";   & ENSG00000188976 & NOC2L  & 959309\\\\\n",
-       "\t chr1 & ensembl\\_havana & gene & 960584 & 965719 & . & + & . & gene\\_id \"\"ENSG00000187961\"\"; transcript\\_id \"\"ENSG00000187961\"\"; gene\\_type \"\"protein\\_coding\"\"; gene\\_name \"\"KLHL17\"\"; transcript\\_type \"\"protein\\_coding\"\"; transcript\\_name \"\"KLHL17\"\"; gene\\_version \"\"14\"\"; gene\\_source \"\"ensembl\\_havana\"\"; & ENSG00000187961 & KLHL17 & 960584\\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "A data.table: 6 × 12\n",
-       "\n",
-       "| V1 &lt;chr&gt; | V2 &lt;chr&gt; | V3 &lt;chr&gt; | V4 &lt;int&gt; | V5 &lt;int&gt; | V6 &lt;chr&gt; | V7 &lt;chr&gt; | V8 &lt;chr&gt; | V9 &lt;chr&gt; | gene &lt;chr&gt; | gene_name &lt;chr&gt; | TSS &lt;int&gt; |\n",
-       "|---|---|---|---|---|---|---|---|---|---|---|---|\n",
-       "| chr1 | ensembl_havana | gene |  65419 |  71585 | . | + | . | gene_id \"\"ENSG00000186092\"\"; transcript_id \"\"ENSG00000186092\"\"; gene_type \"\"protein_coding\"\"; gene_name \"\"OR4F5\"\"; transcript_type \"\"protein_coding\"\"; transcript_name \"\"OR4F5\"\"; gene_version \"\"6\"\"; gene_source \"\"ensembl_havana\"\";    | ENSG00000186092 | OR4F5  |  65419 |\n",
-       "| chr1 | ensembl_havana | gene | 450740 | 451678 | . | - | . | gene_id \"\"ENSG00000284733\"\"; transcript_id \"\"ENSG00000284733\"\"; gene_type \"\"protein_coding\"\"; gene_name \"\"OR4F29\"\"; transcript_type \"\"protein_coding\"\"; transcript_name \"\"OR4F29\"\"; gene_version \"\"2\"\"; gene_source \"\"ensembl_havana\"\";  | ENSG00000284733 | OR4F29 | 451678 |\n",
-       "| chr1 | ensembl_havana | gene | 685679 | 686673 | . | - | . | gene_id \"\"ENSG00000284662\"\"; transcript_id \"\"ENSG00000284662\"\"; gene_type \"\"protein_coding\"\"; gene_name \"\"OR4F16\"\"; transcript_type \"\"protein_coding\"\"; transcript_name \"\"OR4F16\"\"; gene_version \"\"1\"\"; gene_source \"\"ensembl_havana\"\";  | ENSG00000284662 | OR4F16 | 686673 |\n",
-       "| chr1 | ensembl_havana | gene | 923923 | 944575 | . | + | . | gene_id \"\"ENSG00000187634\"\"; transcript_id \"\"ENSG00000187634\"\"; gene_type \"\"protein_coding\"\"; gene_name \"\"SAMD11\"\"; transcript_type \"\"protein_coding\"\"; transcript_name \"\"SAMD11\"\"; gene_version \"\"13\"\"; gene_source \"\"ensembl_havana\"\"; | ENSG00000187634 | SAMD11 | 923923 |\n",
-       "| chr1 | ensembl_havana | gene | 944203 | 959309 | . | - | . | gene_id \"\"ENSG00000188976\"\"; transcript_id \"\"ENSG00000188976\"\"; gene_type \"\"protein_coding\"\"; gene_name \"\"NOC2L\"\"; transcript_type \"\"protein_coding\"\"; transcript_name \"\"NOC2L\"\"; gene_version \"\"11\"\"; gene_source \"\"ensembl_havana\"\";   | ENSG00000188976 | NOC2L  | 959309 |\n",
-       "| chr1 | ensembl_havana | gene | 960584 | 965719 | . | + | . | gene_id \"\"ENSG00000187961\"\"; transcript_id \"\"ENSG00000187961\"\"; gene_type \"\"protein_coding\"\"; gene_name \"\"KLHL17\"\"; transcript_type \"\"protein_coding\"\"; transcript_name \"\"KLHL17\"\"; gene_version \"\"14\"\"; gene_source \"\"ensembl_havana\"\"; | ENSG00000187961 | KLHL17 | 960584 |\n",
-       "\n"
-      ],
-      "text/plain": [
-       "  V1   V2             V3   V4     V5     V6 V7 V8\n",
-       "1 chr1 ensembl_havana gene  65419  71585 .  +  . \n",
-       "2 chr1 ensembl_havana gene 450740 451678 .  -  . \n",
-       "3 chr1 ensembl_havana gene 685679 686673 .  -  . \n",
-       "4 chr1 ensembl_havana gene 923923 944575 .  +  . \n",
-       "5 chr1 ensembl_havana gene 944203 959309 .  -  . \n",
-       "6 chr1 ensembl_havana gene 960584 965719 .  +  . \n",
-       "  V9                                                                                                                                                                                                                                      \n",
-       "1 gene_id \"\"ENSG00000186092\"\"; transcript_id \"\"ENSG00000186092\"\"; gene_type \"\"protein_coding\"\"; gene_name \"\"OR4F5\"\"; transcript_type \"\"protein_coding\"\"; transcript_name \"\"OR4F5\"\"; gene_version \"\"6\"\"; gene_source \"\"ensembl_havana\"\";   \n",
-       "2 gene_id \"\"ENSG00000284733\"\"; transcript_id \"\"ENSG00000284733\"\"; gene_type \"\"protein_coding\"\"; gene_name \"\"OR4F29\"\"; transcript_type \"\"protein_coding\"\"; transcript_name \"\"OR4F29\"\"; gene_version \"\"2\"\"; gene_source \"\"ensembl_havana\"\"; \n",
-       "3 gene_id \"\"ENSG00000284662\"\"; transcript_id \"\"ENSG00000284662\"\"; gene_type \"\"protein_coding\"\"; gene_name \"\"OR4F16\"\"; transcript_type \"\"protein_coding\"\"; transcript_name \"\"OR4F16\"\"; gene_version \"\"1\"\"; gene_source \"\"ensembl_havana\"\"; \n",
-       "4 gene_id \"\"ENSG00000187634\"\"; transcript_id \"\"ENSG00000187634\"\"; gene_type \"\"protein_coding\"\"; gene_name \"\"SAMD11\"\"; transcript_type \"\"protein_coding\"\"; transcript_name \"\"SAMD11\"\"; gene_version \"\"13\"\"; gene_source \"\"ensembl_havana\"\";\n",
-       "5 gene_id \"\"ENSG00000188976\"\"; transcript_id \"\"ENSG00000188976\"\"; gene_type \"\"protein_coding\"\"; gene_name \"\"NOC2L\"\"; transcript_type \"\"protein_coding\"\"; transcript_name \"\"NOC2L\"\"; gene_version \"\"11\"\"; gene_source \"\"ensembl_havana\"\";  \n",
-       "6 gene_id \"\"ENSG00000187961\"\"; transcript_id \"\"ENSG00000187961\"\"; gene_type \"\"protein_coding\"\"; gene_name \"\"KLHL17\"\"; transcript_type \"\"protein_coding\"\"; transcript_name \"\"KLHL17\"\"; gene_version \"\"14\"\"; gene_source \"\"ensembl_havana\"\";\n",
-       "  gene            gene_name TSS   \n",
-       "1 ENSG00000186092 OR4F5      65419\n",
-       "2 ENSG00000284733 OR4F29    451678\n",
-       "3 ENSG00000284662 OR4F16    686673\n",
-       "4 ENSG00000187634 SAMD11    923923\n",
-       "5 ENSG00000188976 NOC2L     959309\n",
-       "6 ENSG00000187961 KLHL17    960584"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -469,8 +436,7 @@
     "pro_gene_region <- gene_region %>% filter(str_detect(V9, \"protein_coding\")) \n",
     "\n",
     "colnames(pro_gene_region)[1] <- 'V1'\n",
-    "pro_gene_region %>% dim\n",
-    "pro_gene_region %>% head"
+    "pro_gene_region %>% dim\n"
    ]
   },
   {
@@ -4094,16 +4060,6 @@
     "        }\n",
     "    }\n",
     "}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d91f10d8-638e-4872-8f67-10ce18da6576",
-   "metadata": {
-    "kernel": "R"
-   },
-   "source": [
-    "### detailed groups"
    ]
   },
   {
