--- a/2024/m6A/m6A_peaks_GWAS.ipynb
+++ b/2024/m6A/m6A_peaks_GWAS.ipynb
@@ -52,53 +52,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "99c0997c-5261-49c6-977b-8ae787ba71b0",
    "metadata": {
     "kernel": "R"
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "── \u001b[1mAttaching core tidyverse packages\u001b[22m ──────────────────────── tidyverse 2.0.0 ──\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mdplyr    \u001b[39m 1.1.4     \u001b[32m✔\u001b[39m \u001b[34mreadr    \u001b[39m 2.1.5\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mforcats  \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mstringr  \u001b[39m 1.5.1\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mggplot2  \u001b[39m 3.5.1     \u001b[32m✔\u001b[39m \u001b[34mtibble   \u001b[39m 3.2.1\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mlubridate\u001b[39m 1.9.3     \u001b[32m✔\u001b[39m \u001b[34mtidyr    \u001b[39m 1.3.1\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mpurrr    \u001b[39m 1.0.2     \n",
-      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mpurrr\u001b[39m::\u001b[32m%||%()\u001b[39m   masks \u001b[34mbase\u001b[39m::%||%()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
-      "\u001b[36mℹ\u001b[39m Use the conflicted package (\u001b[3m\u001b[34m<http://conflicted.r-lib.org/>\u001b[39m\u001b[23m) to force all conflicts to become errors\n",
-      "\n",
-      "Attaching package: ‘data.table’\n",
-      "\n",
-      "\n",
-      "The following objects are masked from ‘package:lubridate’:\n",
-      "\n",
-      "    hour, isoweek, mday, minute, month, quarter, second, wday, week,\n",
-      "    yday, year\n",
-      "\n",
-      "\n",
-      "The following objects are masked from ‘package:dplyr’:\n",
-      "\n",
-      "    between, first, last\n",
-      "\n",
-      "\n",
-      "The following object is masked from ‘package:purrr’:\n",
-      "\n",
-      "    transpose\n",
-      "\n",
-      "\n",
-      "Warning message in fun(libname, pkgname):\n",
-      "“bedtoolsr was built with bedtools version 2.30.0 but you have version 2.31.1 installed. Function syntax may have changed and wrapper will not function correctly. To fix this, please install bedtools version 2.30.0 and either add it to your PATH or run:\n",
-      "options(bedtools.path = \\\"[bedtools path]\\\")”\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "library(tidyverse)\n",
     "library(data.table)\n",
@@ -127,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "8588d46c-5ec4-4056-b9b0-71d2b9c02e05",
    "metadata": {
     "kernel": "R"
@@ -154,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "8f040455-1eda-4435-8c0e-28c1677be2b1",
    "metadata": {
     "kernel": "R"
@@ -170,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
    "id": "de7de8dd-3228-4531-81bb-61d386aacd87",
    "metadata": {
     "kernel": "R"
@@ -203,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 10,
    "id": "d3801e5e-50ff-4559-ae5b-c756236c0dbf",
    "metadata": {
     "kernel": "R"
@@ -285,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 11,
    "id": "674cf8b7-484c-4a5c-86d5-1b09a6a28b8b",
    "metadata": {
     "kernel": "R"
@@ -378,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "1f1c94ec-3b95-4e8e-af63-37d244b0eef4",
    "metadata": {
     "kernel": "R"
@@ -395,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "d1e2b7ed-8d1b-4a54-8054-88e233bc498a",
    "metadata": {
     "kernel": "R"
@@ -441,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 14,
    "id": "492294c9-fcc4-48f4-bb6b-da80229ea2fa",
    "metadata": {
     "kernel": "R",
@@ -598,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "ae393b71-291b-4b6a-85d8-8c368b247059",
    "metadata": {
     "kernel": "R"
@@ -630,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 17,
    "id": "54f663e4-209a-47f0-95a8-7a70f2053d30",
    "metadata": {
     "kernel": "R"
@@ -669,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 18,
    "id": "4419157f-65d1-45d9-a2cc-0b50c503dbd2",
    "metadata": {
     "kernel": "R",
@@ -784,6 +743,47 @@
     "# Check dimensions and preview data\n",
     "m6a_no_gene %>% dim()\n",
     "m6a_gene_anno %>% head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "54ec779c-3a9b-4cf0-92ca-16d2da9a3516",
+   "metadata": {
+    "kernel": "R"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "0.857274228010252"
+      ],
+      "text/latex": [
+       "0.857274228010252"
+      ],
+      "text/markdown": [
+       "0.857274228010252"
+      ],
+      "text/plain": [
+       "[1] 0.8572742"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "1 - (m6a_no_gene %>% distinct(hg38_ID, context) %>% nrow) / (m6a_gene_anno %>% distinct(hg38_ID, context) %>% nrow)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19033e6d-30cd-4366-8e2f-4d752c24eb69",
+   "metadata": {
+    "kernel": "R"
+   },
+   "source": [
+    " >85% peaks can be overlapped with gene body"
    ]
   },
   {
