--- a/2024/m6A/m6A_peaks_GWAS.ipynb
+++ b/2024/m6A/m6A_peaks_GWAS.ipynb
@@ -2298,7 +2298,7 @@
     "set A = brain specific, set B = both brain and other tissues, set C = other tissues but not brains. \n",
     "\n",
     "\n",
-    "The test would be 1) number of brain region with AD variants; 2) number of brain region without AD variants;3) number of other regions with AD variants; 4) number of other regions without AD variants."
+    "The test would be  1) number of \"brain m6A\" overlapping with Bellenguez 2022 AD CS  (AD CS hereafter) 2) number of \"brain m6A\" non-overlapping with AD CS, 3) number of \"non-brain m6A\" overlapping with AD CS , 4) number of \"non-brain m6A\" non-overlapping with AD CS."
    ]
   },
   {
