--- a/2024/m6A/Liu_m6A_peaks_GWAS.ipynb
+++ b/2024/m6A/Liu_m6A_peaks_GWAS.ipynb
@@ -1381,7 +1381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "id": "85106c13-603a-4020-8193-6b96dcc0ed05",
    "metadata": {
     "kernel": "R"
@@ -1406,7 +1406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "id": "a31deef0-1b69-4714-af68-abfa74a5595f",
    "metadata": {
     "kernel": "R"
@@ -1421,12 +1421,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "ddff43da-8dbc-409a-a214-65bd4dd21818",
    "metadata": {
     "kernel": "R"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A data.frame: 6 × 11</caption>\n",
+       "<thead>\n",
+       "\t<tr><th></th><th scope=col>chrom</th><th scope=col>start</th><th scope=col>end</th><th scope=col>hg38_ID</th><th scope=col>context</th><th scope=col>gene_id</th><th scope=col>gene_name</th><th scope=col>chr</th><th scope=col>start_variant</th><th scope=col>end_variant</th><th scope=col>variant_id</th></tr>\n",
+       "\t<tr><th></th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>1</th><td>chr1</td><td> 923934</td><td> 924208</td><td>chr1:923934:924208  </td><td>cerebellum</td><td>ENSG00000187634</td><td>SAMD11</td><td>chr1</td><td> 924024</td><td> 924024</td><td>1:924024:C:G </td></tr>\n",
+       "\t<tr><th scope=row>2</th><td>chr1</td><td> 923934</td><td> 924208</td><td>chr1:923934:924208  </td><td>cerebellum</td><td>ENSG00000187634</td><td>SAMD11</td><td>chr1</td><td> 924090</td><td> 924090</td><td>1:924090:G:A </td></tr>\n",
+       "\t<tr><th scope=row>3</th><td>chr1</td><td> 924961</td><td> 925108</td><td>chr1:924961:925108  </td><td>cerebellum</td><td>ENSG00000187634</td><td>SAMD11</td><td>chr1</td><td> 924983</td><td> 924983</td><td>1:924983:C:T </td></tr>\n",
+       "\t<tr><th scope=row>4</th><td>chr1</td><td> 924961</td><td> 925108</td><td>chr1:924961:925108  </td><td>cerebellum</td><td>ENSG00000187634</td><td>SAMD11</td><td>chr1</td><td> 925036</td><td> 925036</td><td>1:925036:G:A </td></tr>\n",
+       "\t<tr><th scope=row>5</th><td>chr1</td><td> 924961</td><td> 925108</td><td>chr1:924961:925108  </td><td>cerebellum</td><td>ENSG00000187634</td><td>SAMD11</td><td>chr1</td><td> 925081</td><td> 925081</td><td>1:925081:G:A </td></tr>\n",
+       "\t<tr><th scope=row>6</th><td>chr1</td><td>1055050</td><td>1055197</td><td>chr1:1055050:1055197</td><td>cerebellum</td><td>ENSG00000188157</td><td>AGRN  </td><td>chr1</td><td>1055137</td><td>1055137</td><td>1:1055137:C:T</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.frame: 6 × 11\n",
+       "\\begin{tabular}{r|lllllllllll}\n",
+       "  & chrom & start & end & hg38\\_ID & context & gene\\_id & gene\\_name & chr & start\\_variant & end\\_variant & variant\\_id\\\\\n",
+       "  & <chr> & <int> & <int> & <chr> & <chr> & <chr> & <chr> & <chr> & <int> & <int> & <chr>\\\\\n",
+       "\\hline\n",
+       "\t1 & chr1 &  923934 &  924208 & chr1:923934:924208   & cerebellum & ENSG00000187634 & SAMD11 & chr1 &  924024 &  924024 & 1:924024:C:G \\\\\n",
+       "\t2 & chr1 &  923934 &  924208 & chr1:923934:924208   & cerebellum & ENSG00000187634 & SAMD11 & chr1 &  924090 &  924090 & 1:924090:G:A \\\\\n",
+       "\t3 & chr1 &  924961 &  925108 & chr1:924961:925108   & cerebellum & ENSG00000187634 & SAMD11 & chr1 &  924983 &  924983 & 1:924983:C:T \\\\\n",
+       "\t4 & chr1 &  924961 &  925108 & chr1:924961:925108   & cerebellum & ENSG00000187634 & SAMD11 & chr1 &  925036 &  925036 & 1:925036:G:A \\\\\n",
+       "\t5 & chr1 &  924961 &  925108 & chr1:924961:925108   & cerebellum & ENSG00000187634 & SAMD11 & chr1 &  925081 &  925081 & 1:925081:G:A \\\\\n",
+       "\t6 & chr1 & 1055050 & 1055197 & chr1:1055050:1055197 & cerebellum & ENSG00000188157 & AGRN   & chr1 & 1055137 & 1055137 & 1:1055137:C:T\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.frame: 6 × 11\n",
+       "\n",
+       "| <!--/--> | chrom &lt;chr&gt; | start &lt;int&gt; | end &lt;int&gt; | hg38_ID &lt;chr&gt; | context &lt;chr&gt; | gene_id &lt;chr&gt; | gene_name &lt;chr&gt; | chr &lt;chr&gt; | start_variant &lt;int&gt; | end_variant &lt;int&gt; | variant_id &lt;chr&gt; |\n",
+       "|---|---|---|---|---|---|---|---|---|---|---|---|\n",
+       "| 1 | chr1 |  923934 |  924208 | chr1:923934:924208   | cerebellum | ENSG00000187634 | SAMD11 | chr1 |  924024 |  924024 | 1:924024:C:G  |\n",
+       "| 2 | chr1 |  923934 |  924208 | chr1:923934:924208   | cerebellum | ENSG00000187634 | SAMD11 | chr1 |  924090 |  924090 | 1:924090:G:A  |\n",
+       "| 3 | chr1 |  924961 |  925108 | chr1:924961:925108   | cerebellum | ENSG00000187634 | SAMD11 | chr1 |  924983 |  924983 | 1:924983:C:T  |\n",
+       "| 4 | chr1 |  924961 |  925108 | chr1:924961:925108   | cerebellum | ENSG00000187634 | SAMD11 | chr1 |  925036 |  925036 | 1:925036:G:A  |\n",
+       "| 5 | chr1 |  924961 |  925108 | chr1:924961:925108   | cerebellum | ENSG00000187634 | SAMD11 | chr1 |  925081 |  925081 | 1:925081:G:A  |\n",
+       "| 6 | chr1 | 1055050 | 1055197 | chr1:1055050:1055197 | cerebellum | ENSG00000188157 | AGRN   | chr1 | 1055137 | 1055137 | 1:1055137:C:T |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  chrom start   end     hg38_ID              context    gene_id        \n",
+       "1 chr1   923934  924208 chr1:923934:924208   cerebellum ENSG00000187634\n",
+       "2 chr1   923934  924208 chr1:923934:924208   cerebellum ENSG00000187634\n",
+       "3 chr1   924961  925108 chr1:924961:925108   cerebellum ENSG00000187634\n",
+       "4 chr1   924961  925108 chr1:924961:925108   cerebellum ENSG00000187634\n",
+       "5 chr1   924961  925108 chr1:924961:925108   cerebellum ENSG00000187634\n",
+       "6 chr1  1055050 1055197 chr1:1055050:1055197 cerebellum ENSG00000188157\n",
+       "  gene_name chr  start_variant end_variant variant_id   \n",
+       "1 SAMD11    chr1  924024        924024     1:924024:C:G \n",
+       "2 SAMD11    chr1  924090        924090     1:924090:G:A \n",
+       "3 SAMD11    chr1  924983        924983     1:924983:C:T \n",
+       "4 SAMD11    chr1  925036        925036     1:925036:G:A \n",
+       "5 SAMD11    chr1  925081        925081     1:925081:G:A \n",
+       "6 AGRN      chr1 1055137       1055137     1:1055137:C:T"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "colnames(m6a_non_gene_bed_ad) <- c(\"chrom\", \"start\", \"end\", \"hg38_ID\", \"context\", \"gene_id\", \"gene_name\", colnames(non_adgwas_bed))\n",
     "m6a_non_gene_bed_ad %>% head"
@@ -1473,7 +1541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "id": "b9d8eaa3-e571-4b03-a3ed-f831fe21e17f",
    "metadata": {
     "kernel": "R"
@@ -1520,12 +1588,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "id": "094f14a8-d882-4900-a29a-c24c0ab9f05c",
    "metadata": {
     "kernel": "R"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       ".\n",
+       "cerebellum   cerebrum \n",
+       "         2          2 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# The number of variants within both AD loci and are m6A sites in different contexts\n",
     "m6a_gene_bed_ad %>% distinct(context, variant_id, .keep_all = TRUE) %>% pull(context) %>% table"
@@ -1533,13 +1613,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "id": "5e8e8dd4-67f6-4742-b7ef-88e514347657",
    "metadata": {
     "kernel": "R",
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       ".\n",
+       "  cerebellum     cerebrum Hypothalamus \n",
+       "       12236        16848         5824 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# The number of variants within both non-AD loci and are m6A sites in different contexts\n",
     "m6a_non_gene_bed_ad %>% distinct(context, variant_id, .keep_all = TRUE) %>% pull(context) %>% table"
@@ -1557,12 +1649,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "id": "1deddbbb-b033-4c9b-8c0c-5c70ab0681d5",
    "metadata": {
     "kernel": "R"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "$data\n",
+       "        m6A\n",
+       "AD         m6A  not_m6A\n",
+       "  AD         4     1279\n",
+       "  not_AD 30395 12176240\n",
+       "\n",
+       "$res\n",
+       "\n",
+       "\tFisher's Exact Test for Count Data\n",
+       "\n",
+       "data:  contingency_table\n",
+       "p-value = 0.5679\n",
+       "alternative hypothesis: true odds ratio is not equal to 1\n",
+       "95 percent confidence interval:\n",
+       " 0.3408197 3.2160375\n",
+       "sample estimates:\n",
+       "odds ratio \n",
+       "  1.252851 \n",
+       "\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Two-sided test\n",
     "perform_fisher_test(adgwas = gwas, all_gwas = all_gwas, m6a_ad = m6a_gene_bed_ad, m6a_not_ad = m6a_non_gene_bed_ad) "
